--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ div button svg {
   position: absolute;
   bottom: 0px;
   width: 97%;
-  background-color: rgb(61, 184, 61);
+  background-color: #1db954;
 }
 
 
