--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ nav {
   /* gap: 5px; */
   padding: 13px;
 }
-section {
+/* section {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -71,7 +71,31 @@ section {
   padding: 10px;
 
   border-radius: 7px;
-  /* border: 2px solid red; */
+  /* border: 2px solid red; 
+} */
+
+.songsList{
+  padding: 24px;
+}
+.songsList ul li{
+display: flex;
+    gap: 3px;
+    list-style-type: decimal;
+    /* padding: 3px; */
+    text-transform: capitalize;
+    justify-content: space-between;
+    padding: 7px 0px;
+    border: 1px solid white;
+    margin: 8px 0px;
+    border-radius: 7px;
+    font-size: 12px;
+}
+.playNow{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+
 }
 .rightFooter {
   position: absolute;
