--- a/style.css
+++ b/style.css
@@ -75,11 +75,14 @@ nav {
 } */
 
 .songsList{
-  padding: 24px;
+      padding: 5px;
+    height: 400px;
+    overflow: auto;
+
 }
 .songsList ul li{
-display: flex;
-    gap: 3px;
+    display: flex;
+    /* gap: 17px; */
     list-style-type: decimal;
     /* padding: 3px; */
     text-transform: capitalize;
@@ -89,6 +92,7 @@ display: flex;
     margin: 8px 0px;
     border-radius: 7px;
     font-size: 12px;
+    align-items: center;
 }
 .playNow{
   display: flex;
@@ -96,6 +100,9 @@ display: flex;
     align-items: center;
     gap: 3px;
 
+}
+.playNow span{
+      width: 50px;
 }
 .rightFooter {
   position: absolute;
