--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ div button svg {
 }
 
 .playButton{
-  display: flex;
+  /* display: flex;
   justify-content: center;
   margin: 10px;
   padding: 10px;
@@ -233,7 +233,39 @@ div button svg {
   position: absolute;
   bottom: 0px;
   width: 97%;
-  background-color: #1db954;
+  background-color: #1db954; */
+  display: flex;
+    justify-content: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    position: absolute;
+    bottom: 0px;
+    width: 97%;
+    background-color: #1db954;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+}
+
+.seekbar{
+  width: 100%;
+  height: 2px;
+  border: 2px solid red;
+  margin: 3px 0px;
+  border-radius: 100px;
+
+}
+.circle{
+  background-color: rgb(255, 255, 255);
+    height: 14px;
+    width: 14px;
+    border-radius: 50px;
+    position: absolute;
+    bottom: 8px;
+    left: 5px;
+    
 }
 
 
